# lynqo

./: Cargo.toml  README.md  run-lynqo.command
apps/desktop/: README.md  pubspec.yaml
apps/desktop/lib/: main.dart  models.dart
apps/desktop/lib/core/: providers.dart  server_manager.dart  ws_client.dart
apps/desktop/lib/ui/: screens.dart
apps/desktop/macos/Flutter/: GeneratedPluginRegistrant.swift
apps/desktop/macos/Runner/: MainFlutterWindow.swift
apps/desktop/macos/Runner.xcodeproj/: project.pbxproj
apps/desktop/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/desktop/macos/Runner/Configs/: AppInfo.xcconfig
apps/desktop/macos/ShareExtension/: Info.plist  ShareViewController.swift
apps/desktop/macos/scripts/xcode_add_share_extension/: Package.swift
apps/desktop/macos/scripts/xcode_add_share_extension/Sources/: main.swift
apps/desktop/test/: widget_test.dart
crates/lynqo-clipboard/: Cargo.toml
crates/lynqo-clipboard/src/: lib.rs
crates/lynqo-core/: Cargo.toml
crates/lynqo-core/src/: lib.rs
crates/lynqo-db/: Cargo.toml
crates/lynqo-db/src/: lib.rs
crates/lynqo-discovery/: Cargo.toml
crates/lynqo-discovery/src/: lib.rs
crates/lynqo-files/: Cargo.toml
crates/lynqo-files/src/: lib.rs
crates/lynqo-server/: Cargo.toml  video_thumbnail
crates/lynqo-server/src/: main.rs  state.rs  tunnel.rs  video_thumbnail.swift
crates/lynqo-server/src/routes/: clipboard.rs  devices.rs  files.rs  mod.rs  shared_folder.rs  status.rs  video_review.rs
crates/lynqo-server/src/ws/: mod.rs
web/browser-ui/: index.html  package-lock.json  package.json
web/browser-ui/src/: App.tsx  index.css  types.ts  utils.ts
web/browser-ui/src/components/: Sparkline.tsx
web/browser-ui/src/hooks/: useStore.ts  useWebSocket.ts
web/browser-ui/src/pages/: ClipboardPage.tsx  Dashboard.tsx  DevicesPage.tsx  FilesPage.tsx  SharedFolderPage.tsx
