[workspace]
members = [
    "crates/lynqo-server",
    "crates/lynqo-core",
    "crates/lynqo-clipboard",
    "crates/lynqo-discovery",
    "crates/lynqo-db",
    "crates/lynqo-files",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
deadpool-sqlite = "0.8"
mdns-sd = "0.11"
arboard = "3"
rand = "0.8"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
futures = "0.3"
mime_guess = "2"
dirs = "5"
clap = { version = "4", features = ["derive"] }
