[package]
name = "lynqo-db"
version = "0.1.0"
edition = "2021"

[dependencies]
lynqo-core = { path = "../lynqo-core" }
rusqlite = { workspace = true }
deadpool-sqlite = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
